# vook_db_v5

./: .gitignore  get_yahoo_data.ipynb  pyproject.toml
vook_db_v5/: config.py  get_yahoo_data.py
