[tool.poetry]
name = "vook-db-v5"
version = "0.1.0"
description = ""
authors = ["Takayuki Koga <kogatakayuki.icloud.com>"]
readme = "README.md"
packages = [{include = "vook_db_v5"}]

[tool.poetry.dependencies]
python = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
