[tool.poetry]
name = "vook-db-v5"
version = "0.1.0"
description = ""
authors = ["Takayuki Koga <kogatakayuki.icloud.com>"]
readme = "README.md"
packages = [{include = "vook_db_v5"}]

[tool.poetry.dependencies]
python = "^3.10.5"
jupyterlab = "^4.0.5"
jupyterlab-code-formatter = "^2.2.1"
flake8 = "^6.1.0"
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
